fixed alignment to checkout text and cover

--- a/css/styles.css
+++ b/css/styles.css
@@ -694,7 +694,8 @@ footer a,
     padding-top: 20%;
   }
 
-  .contact {
+  .contact,
+  .checkout {
     max-width: 700px;
     margin: 0px auto;
   }
